[gd_scene load_steps=18 format=2]

[ext_resource path="res://Src/WindowManager/WindowBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/ExpeditionWindow/Bg_3x.png" type="Texture" id=2]
[ext_resource path="res://Src/WindowManager/BaseButtonGreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/WindowManager/BaseButtonPink.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/CharacterWindow/Content.gd" type="Script" id=5]
[ext_resource path="res://Assets/CharacterSelection/Portraits.png" type="Texture" id=6]
[ext_resource path="res://Src/Ui/Select/CheckList.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fonts/TitleFont24.tres" type="DynamicFont" id=8]
[ext_resource path="res://Assets/Fonts/NormalFontSmall13.tres" type="DynamicFont" id=9]
[ext_resource path="res://Assets/Ui/Select/Down3x2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Ui/Select/Down3x3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Ui/Select/Down3x1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Ui/Select/Up3x1.png" type="Texture" id=13]
[ext_resource path="res://Assets/Ui/Select/Up3x3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Ui/Select/Up3x2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Ui/Select/Up3x4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Ui/Select/Down3x4.png" type="Texture" id=17]

[node name="CharacterWindow" instance=ExtResource( 1 )]
margin_left = -152.0
margin_top = -157.0
margin_right = 152.0
margin_bottom = 89.0

[node name="Bg" parent="." index="0"]
margin_right = -1.0
margin_bottom = 60.0

[node name="Content" parent="." index="2"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="Content" index="0"]
margin_left = 4.0
margin_right = 298.0
margin_bottom = 216.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseButtonGreen" parent="Content" index="1" instance=ExtResource( 3 )]
margin_left = 212.939
margin_top = 278.052
margin_right = 302.94
margin_bottom = 305.052

[node name="BaseButtonPink" parent="Content" index="2" instance=ExtResource( 4 )]
margin_left = 122.939
margin_top = 278.052
margin_right = 212.939
margin_bottom = 305.052

[node name="CheckList" parent="Content" index="3" instance=ExtResource( 7 )]
margin_left = 5.9395
margin_top = 63.052
margin_right = 149.939
margin_bottom = 252.052

[node name="Chars" type="Sprite" parent="Content" index="4"]
position = Vector2( 154, 60 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
centered = false
hframes = 10

[node name="DummyLabel" type="Label" parent="Content" index="5"]
visible = false
margin_left = 153.999
margin_top = 53.6308
margin_right = 289.999
margin_bottom = 101.631
custom_fonts/font = ExtResource( 9 )

[node name="Title" type="Label" parent="Content" index="6"]
margin_left = 7.0
margin_top = 4.0
margin_right = 294.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 8 )
text = "Title"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="Content" index="7"]
margin_left = 155.0
margin_top = 232.0
margin_right = 297.0
margin_bottom = 272.0
custom_fonts/normal_font = ExtResource( 9 )
text = "Text asd as das dasd asd asda sdasd asd aass"

[node name="UpButton" type="TextureButton" parent="Content" index="8"]
margin_left = 7.0
margin_top = 255.0
margin_right = 73.0
margin_bottom = 270.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 16 )

[node name="DownButton" type="TextureButton" parent="Content" index="9"]
margin_left = 82.0
margin_top = 255.0
margin_right = 148.0
margin_bottom = 270.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 17 )
[connection signal="button_up" from="Content/BaseButtonGreen" to="Content" method="_on_BaseButtonGreen_button_up"]
[connection signal="button_up" from="Content/BaseButtonPink" to="Content" method="_on_BaseButtonPink_button_up"]
[connection signal="list_active" from="Content/CheckList" to="Content" method="_on_CheckList_list_active"]
[connection signal="button_up" from="Content/UpButton" to="Content" method="_on_UpButton_button_up"]
[connection signal="button_up" from="Content/DownButton" to="Content" method="_on_DownButton_button_up"]
